# DSSATpre

./: .gitignore  CMakeLists.txt  README
cmake/: FindGLPK.cmake
libs/: CMakeLists.txt
libs/aigpp/: .clang-format  AigerParser.cc  AigerParser.hh  CMakeLists.txt  ComputedTable.cc  ComputedTable.hh  CuddTools.cc  CuddTools.hh  Doxyfile  DynamicRewritingTable.cc  DynamicRewritingTable.hh  Edge.cc  Edge.hh  Edge.icc  EdgeRef.cc  EdgeRef.hh  EdgeRef.icc  EdgeRef_operations.cc  EdgeRef_operations.icc  EquivalenceChecker.cc  EquivalenceChecker.hh  ExtRefTable.cc  ExtRefTable.hh  FRAIGManager.cc  FRAIGManager.hh  FourInputFunction.cc  FourInputFunction.hh  InternalEdgeRef.cc  InternalEdgeRef.hh  InternalEdgeRef.icc  InternalEdgeRef_decompose.cc  InternalEdgeRef_exportBDD.cc  InternalEdgeRef_polarity.cc  Manager.cc  Manager.hh  Manager.icc  Manager_BDDQuantify.cc  Manager_BDDSweeping.cc  Manager_and.cc  Manager_assignment.cc  (+42 more)
libs/antom/Core/: watcher.h
libs/antom/prepro/: bce.cpp  bce.h
libs/antom/solver/: antom.cpp  antom.h  antombase.h  softclausenodes.h
libs/cudd-3.0.0/: CMakeLists.txt
libs/cudd-3.0.0/cplusplus/: cuddObj.cc  cuddObj.hh
libs/cudd-3.0.0/dddmp/: dddmpStoreCnf.c
libs/lrabsutil/: Assert.hh  BoolVector.cc  BoolVector.hh  BoolVector.icc  CMakeLists.txt  ConfigMap.cc  ConfigMap.hh  ConfigMap.icc  Exception.cc  Exception.hh  Exception.icc  Hashes.hh  Math.hh  Math.icc  Random.cc  Random.hh  Random.icc  Resources.cc  Resources.hh  SetIterators.hh  SimpleStack.hh  SimpleStack.icc  String.cc  String.hh  String.icc  UnionFind.cc  UnionFind.hh  ValidateableArray.hh  ValidateableArray.icc  Vector.hh  Vector.icc  set_iterators_test.cpp
libs/minicraig/: Alg.h  BasicHeap.h  BoxedVec.h  CMakeLists.txt  Heap.h  Map.h  Queue.h  SimpSolver.C  SimpSolver.h  Solver.C  Solver.h  SolverTypes.h  Sort.h  Vec.h  craig_define.hpp  minisat_bmc.cpp  minisat_bmc.hpp  minisat_craig.cpp  minisat_craig.hpp  parallel_define.hpp  proof_define.hpp  simple_aig.cpp  simple_aig.hpp  simple_aig_inline.hpp  time_check.cpp  time_check.hpp  types.hpp
libs/minisat/: CMakeLists.txt
libs/minisat/core/: Main.cc  Solver.cc  Solver.h  SolverTypes.h
libs/minisat/mtl/: Alloc.h  Map.h  Vec.h
libs/minisat/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
libs/minisat/utils/: Options.cc  Options.h  ParseUtils.h  System.cc
libs/picosat/: picosat.c
src/: .clang-format  CHANGES  CMakeLists.txt  bool_vector.cpp  clause.cpp  formula.cpp  formula.hpp  formula_blocked_et_al.cpp  formula_blocked_et_al.ipp  formula_debug.cpp  formula_dep_schemes.cpp  formula_elim_set.cpp  formula_equiv_contra.cpp  formula_experimental.cpp  formula_findHidden.cpp  formula_forkExt.cpp  formula_gates.cpp  formula_inout.cpp  formula_resolution.cpp  formula_sat.cpp  formula_substitute.cpp  formula_unit_pure.cpp  formula_univ_expand.cpp  formula_univ_red.cpp  formula_vivification.cpp  gate.cpp  main.cpp  prefix.cpp  process_limits.hpp  settings.cpp
